Desafio13 - Multiplos de 3 e de 5

--- a/Desafios/Desafio13/desafio.html
+++ b/Desafios/Desafio13/desafio.html
@@ -6,7 +6,7 @@
     <title>Desafio 13!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="iniciar()">
     <header>
         <h1>Multiplos de 3 ou do 5!</h1>
     </header>
@@ -14,7 +14,7 @@
     <section>
         <div>
             <p>Verificador de Multiplos de 3 ou do 5! </p>
-            <p>Insira um número: <input type="number" name="txtnum" id="txtnum" class="txtnr"> <input type="button" name="btninsert" id="btninsert" value="Inserir"> </p>
+            <p>Insira um número: <input type="number" name="txtnum" id="txtnum" class="txtnr"> <input type="button" name="btninsert" id="btninsert" value="Inserir" onclick="inserir()"> </p>
             <p>
                 <select name="selnum" id="selnum" size="6">
 
