--- a/Desafios/Desafio13/desafio.html
+++ b/Desafios/Desafio13/desafio.html
@@ -19,7 +19,7 @@
                 <select name="selnum" id="selnum" size="6">
 
                 </select><br>
-                <input type="button" name="btnverifica" id="btnverifica" value="Verificar" class="btnverificar">
+                <input type="button" name="btnverifica" id="btnverifica" value="Encontrar Multiplos" class="btnverificar" onclick="encontar()">
             </p>
         </div>
         <div>
