Desafio13 - Multiplos de 3 e de 5

--- a/Desafios/Desafio13/desafio.html
+++ b/Desafios/Desafio13/desafio.html
@@ -22,8 +22,8 @@
                 <input type="button" name="btnverifica" id="btnverifica" value="Encontrar Multiplos" class="btnverificar" onclick="encontar()">
             </p>
         </div>
-        <div>
-            Vamos tentar resolver!
+        <div id="resultado">
+            
         </div>
     </section>
 
