Desafio14 - Maior ou menor de Idade >=18

--- a/Desafios/Desafio14/desafio.html
+++ b/Desafios/Desafio14/desafio.html
@@ -14,8 +14,8 @@
     <section>
         <div>
             
-           <p>Insira o seu ano de nascimento:<input type="number" id="txtnum" name="txtnum">
-            <input type="button" value="Inserir">
+           <p>Insira o ano de nascimento:<input type="number" id="txtnum" name="txtnum">
+            <input type="button" value="Inserir" onclick="inserir()">
         </p>
         <p>
             <select name="selectIdade" id="selectIdade" size="5">
