Desafio14 - Maior ou menor de Idade >=18

--- a/Desafios/Desafio14/desafio.html
+++ b/Desafios/Desafio14/desafio.html
@@ -21,11 +21,11 @@
             <select name="selectIdade" id="selectIdade" size="5">
 
             </select><br>
-            <input type="button" value="Verificar" class="btnverifica">
+            <input type="button" value="Verificar" class="btnverifica" onclick="maiorDeIdade()">
         </p>
         </div>
-        <div>
-            
+        <div id="resultado">
+                
         </div>
     </section>
 
