Desafio15- Nomes em ordem invertida

--- a/Desafios/Desafio15/desafio.html
+++ b/Desafios/Desafio15/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-           <p>Insira um nome: <input type="text" maxlength="10" size="11" name="tNome" id="cNome"> <input type="button" value="Inserir"> </p>
+           <p class="insNome">Insira um nome: <input type="text" maxlength="10" size="11" name="tNome" id="cNome"> <input type="button" value="Inserir"> </p>
            <p>
                <select name="sNome" id="selNome" size="7">
 
