Desafio15- Nomes em ordem invertida

--- a/Desafios/Desafio15/desafio.html
+++ b/Desafios/Desafio15/desafio.html
@@ -6,7 +6,7 @@
     <title>Desafio 15!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="iniciar()">
     <header>
         <h1>Nomes Invertos!</h1>
     </header>
