--- a/Desafios/Desafio15/desafio.html
+++ b/Desafios/Desafio15/desafio.html
@@ -13,10 +13,10 @@
     
     <section>
         <div>
-           <p class="insNome">Insira um nome: <input type="text" maxlength="10" size="11" name="tNome" id="cNome"> <input type="button" value="Inserir"> </p>
+           <p class="insNome">Insira um nome: <input type="text" maxlength="10" size="11" name="tNome" id="cNome"> <input type="button" value="Inserir" onclick="inserir()"> </p>
            <p>
                <select name="sNome" id="selNome" size="7">
-                    
+
                </select>
            </p>
         </div>
