Desafio15- Nomes em ordem invertida

--- a/Desafios/Desafio15/desafio.html
+++ b/Desafios/Desafio15/desafio.html
@@ -10,7 +10,7 @@
 
 <body onload="iniciar()">
     <header>
-        <h1>Nomes Invertos!</h1>
+        <h1>Nomes Invertidos!</h1>
     </header>
     
     <section>
