--- a/Desafios/Desafio15/desafio.html
+++ b/Desafios/Desafio15/desafio.html
@@ -22,7 +22,7 @@
             
                 <select name="sNome" id="selNome" size="7">
                 </select><br><br>
-                <input type="button" value="Inverter" onclick="inverte()">
+                <input type="button" value="Inverter" onclick="inverte()" id="btnIverter">
            </p>
 
         </div>
