Exercicio09 - Adicional - Calculadora de juros

--- a/Desafios/Desafio24_adicional_09/desafio.html
+++ b/Desafios/Desafio24_adicional_09/desafio.html
@@ -14,7 +14,7 @@
     <section>
         <div>
             <p>Precisa de um empréstimo?</p>
-            <p>Qual o valor: <input type="number" id="cValEmpres" name="tValEmpres"> </p>
+            <p>Valor: <input type="number" id="cValEmpres" name="tValEmpres">€   <span class="Lbljuros">Juros:</span> <input type="number" id="cJuros" name="tJuros">% <input type="button" value="Calcular" class="btnCalcular"> </p>
         </div>
         <div>
             Vamos tentar resolver!
