Exercicio09 - Adicional - Calculadora de juros

--- a/Desafios/Desafio24_adicional_09/desafio.html
+++ b/Desafios/Desafio24_adicional_09/desafio.html
@@ -6,7 +6,7 @@
     <title>Modelo Para os Desafios!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="iniciar()">
     <header>
         <h1>Calculadora de juros!</h1>
     </header>
@@ -14,7 +14,7 @@
     <section>
         <div>
             <p>Precisa de um empréstimo?</p>
-            <p>Valor: <input type="number" id="cValEmpres" name="tValEmpres">€   <span class="Lbljuros">Juros:</span> <input type="number" id="cJuros" name="tJuros">% <input type="button" value="Calcular" class="btnCalcular"> </p>
+            <p>Valor: <input type="number" id="cValEmpres" name="tValEmpres" onchange="ativaCxJuros()">€<span class="Lbljuros">Juros:</span> <input type="number" id="cJuros" name="tJuros" readonly>% <input type="button" value="Calcular" class="btnCalcular"> </p>
         </div>
         <div>
             Vamos tentar resolver!
