Exercicio09 - Adicional - Calculadora de juros

--- a/Desafios/Desafio24_adicional_09/desafio.html
+++ b/Desafios/Desafio24_adicional_09/desafio.html
@@ -17,7 +17,7 @@
             <p>Valor: <input type="number" id="cValEmpres" name="tValEmpres" onchange="ativaCxJuros()">€<span class="Lbljuros">Juros:</span> <input type="number" id="cJuros" name="tJuros" readonly>% <input type="button" value="Calcular" class="btnCalcular" onclick="calcular()"> </p>
         </div>
         <div>
-            Vamos tentar resolver!
+            <p class="detalhes">Este empréstimo tem como valor minimo 250€. Com juros entre 2% e 26%</p>
         </div>
     </section>
 
