--- a/Desafios/Desafio24_adicional_09/desafio.html
+++ b/Desafios/Desafio24_adicional_09/desafio.html
@@ -20,7 +20,7 @@
             <p><span class="Lbljuros">Juros:</span> <input type="number" id="cJuros" name="tJuros" readonly placeholder="2%" onchange="ativaCXparcelar()">%</p>
             
             <p>Pagar:<input type="number" name="tCxParcelar" id="cxParcelar" placeholder="3 Meses" readonly>meses.<br>
-                <input type="button" value="Simular" class="btnCalcular" onclick="calcular()">
+                <input type="button" value="Simular" class="btnCalcular" id="btnSimular" onclick="calcular()">
             </p>
             
         </div>
