--- a/Desafios/Desafio16/desafio.html
+++ b/Desafios/Desafio16/desafio.html
@@ -17,8 +17,8 @@
                 <p>Altura <input type="number" class="cxAltura" id="CinpAltura" name="TinpAltura">m</p>
             
                 <p class="Difersex">Sexo:<br>
-                <input type="radio" name="sexo" id="Fem">Feminino <br>
-                <input type="radio" name="sexo" id="Masc">Masculino   <br>  
+                <input type="radio" name="sexo" id="sexFem">Feminino <br>
+                <input type="radio" name="sexo" id="sexMasc">Masculino   <br>  
                 <input type="button" value="Inserir" class="btnInserir" onclick="inserir()">
                 </p>
 
