--- a/Desafios/Desafio16/desafio.html
+++ b/Desafios/Desafio16/desafio.html
@@ -29,7 +29,7 @@
                 <select name="tSelDetalhes" id="cSelDetalhes" size="6">
 
                 </select><br>
-                <input type="button" value="Verificar" onclick="verificar()">
+                <input type="button" value="Verificar" onclick="verificar()" id="btnVerificar">
             </div>
         </article>
 
