--- a/Desafios/Desafio17/desafio.html
+++ b/Desafios/Desafio17/desafio.html
@@ -6,7 +6,7 @@
     <title>Desafio 17!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="teste()">
     <header>
         <h1>Avaliador de filmes</h1>
     </header>
@@ -14,8 +14,16 @@
     <section>
         <div>
             <h3>A sua opinião é importante para nós?</h3>
-            <p>O que achou do filme <span><em>"Escola Javali Cansado"</em></span></p>
-            <p>Idade: <input type="number"></p>
+            <p>O que achou do filme: <span><em>"Escola Javali Cansado"</em></span></p>
+            <p>Idade: <input type="number" name="tCxNum" id="CxNum"></p>
+            A sua opinião:
+            <select name="tSelOpina" id="cSelOpina">
+                <option value="Pesimo">Pésimo</option>
+                <option value="Mau">Mau</option>
+                <option value="Regular">Regular</option>
+                <option value="Bom">Bom</option>
+                <option value="Optimo">Óptimo</option>
+            </select>
         </div>
         <div>
         </div>
