Desafio17 - Avaliador de Filmes

--- a/Desafios/Desafio17/desafio.html
+++ b/Desafios/Desafio17/desafio.html
@@ -26,7 +26,11 @@
                 <input type="button" value="Adicionar" onclick="Adicionar()" class="btnAdicionar">                 
             </p>
         </div>
-        <div>
+        <div id="adicinar">
+            Detalhes:
+            <select name="tSelOpinao" id="cSelOpinao">
+
+            </select>
         </div>
     </section>
 
