Desafio17 - Avaliador de Filmes

--- a/Desafios/Desafio17/desafio.html
+++ b/Desafios/Desafio17/desafio.html
@@ -27,10 +27,13 @@
             </p>
         </div>
         <div id="adicinar">
-            Detalhes:
-            <select name="tSelOpinao" id="cSelOpinao">
-
-            </select>
+            
+            <p>
+                <span class="dtl">Detalhes:</span><br>
+                <select name="tSelOpinao" id="cSelOpinao" size="6"> 
+    
+                </select>
+            </p>
         </div>
     </section>
 
