Desafio17 - Avaliador de Filmes

--- a/Desafios/Desafio17/desafio.html
+++ b/Desafios/Desafio17/desafio.html
@@ -19,7 +19,7 @@
                 <select name="tSelOpina" id="cSelOpina">
                     <option value="Pesimo">Pésimo</option>
                     <option value="Mau">Mau</option>
-                    <option value="Regular" selected>Regular</option>
+                    <option value="Regular">Regular</option>
                     <option value="Bom">Bom</option>
                     <option value="Excelente">Excelente</option>
                 </select>
