Desafio17 - Avaliador de Filmes

--- a/Desafios/Desafio17/desafio.html
+++ b/Desafios/Desafio17/desafio.html
@@ -16,7 +16,7 @@
             <h3>A sua opinião é importante para nós?</h3>
             <p>O que achou do filme: <span><em>"Escola Javali Cansado"</em></span></p>
             <p>Idade: <input type="number" name="tCxNum" id="CxNum"> A sua opinião:
-                <select name="tSelOpina" id="cSelOpina">
+                <select name="tSelOpina" id="cSelOpina" size="3">
                     <option value="Pesimo">Pésimo</option>
                     <option value="Mau">Mau</option>
                     <option value="Regular">Regular</option>
