--- a/Desafios/Desafio17/desafio.html
+++ b/Desafios/Desafio17/desafio.html
@@ -15,15 +15,23 @@
         <div>
             <h3>A sua opinião é importante para nós?</h3>
             <p>O que achou do filme: <span><em>"Escola Javali Cansado"</em></span></p>
-            <p>Idade: <input type="number" name="tCxNum" id="CxNum"> A sua opinião:
-                <select name="tSelOpina" id="cSelOpina" size="3">
-                    <option value="Pesimo">Pésimo</option>
-                    <option value="Mau">Mau</option>
-                    <option value="Regular">Regular</option>
-                    <option value="Bom">Bom</option>
-                    <option value="Excelente">Excelente</option>
-                </select>
-                <input type="button" value="Adicionar" onclick="Adicionar()" class="btnAdicionar">                 
+
+            <article class="idd">
+                <p>Idade: <input type="number" name="tCxNum" id="CxNum">
+            </article>
+                
+                 <article class="opn">
+                     A sua opinião:<br>
+                    <select name="tSelOpina" id="cSelOpina" size="5">
+                        <option value="Pesimo">Pésimo</option>
+                        <option value="Mau">Mau</option>
+                        <option value="Regular">Regular</option>
+                        <option value="Bom">Bom</option>
+                        <option value="Excelente">Excelente</option>
+                    </select>
+                 </article>
+
+                <input type="button" value="Adicionar" onclick="Adicionar()" class="btnAdicionar" id="BtnAdiciona">                 
             </p>
         </div>
         <div id="adicinar">
