--- a/Desafios/Desafio17/desafio.html
+++ b/Desafios/Desafio17/desafio.html
@@ -37,7 +37,10 @@
                 </div>
         </div>
 
-  
+        <div id="resultado">
+
+        </div>
+        
     </section>
 
     <footer>
