Desafio17 - Avaliador de Filmes

--- a/Desafios/Desafio17/desafio.html
+++ b/Desafios/Desafio17/desafio.html
@@ -21,7 +21,7 @@
                     <p>Idade: <input type="number" name="tCxNum" id="CxNum"><br><br>           
                          <span class="Propiniao">A sua opinião:</span><br>
                         <select name="tSelOpina" id="cSelOpina" size="5">
-                            <option value="Pesimo">Péssimo</option>
+                            <option value="Pessimo">Péssimo</option>
                             <option value="Mau">Mau</option>
                             <option value="Regular">Regular</option>
                             <option value="Bom">Bom</option>
