Desafio18 - Idade, Genero, Totalizador

--- a/Desafios/Desafio18/desafio.html
+++ b/Desafios/Desafio18/desafio.html
@@ -13,10 +13,16 @@
     
     <section>
         <div>
-            Desafio??????
+            <p>Ano de Nascimento: <input type="number"> </p>
+            <fieldset>
+                <legend>Género:</legend>
+                <input type="radio" name="Genero" value="Feminino"> Feminino
+                <input type="radio" name="Genero" value="Masculino"> Masculino
+            </fieldset><br>
+            <input type="button" value="Adicionar">
         </div>
         <div>
-            Vamos tentar resolver!
+           
         </div>
     </section>
 
