--- a/Desafios/Desafio18/desafio.html
+++ b/Desafios/Desafio18/desafio.html
@@ -12,17 +12,17 @@
     </header>
     
     <section>
-        <div>
-            <p>Ano de Nascimento: <input type="number"> </p>
+        <div class="RecebDados">
+            <p>Ano de Nascimento: <input type="number" class="inpAnoNasc"> </p>
             <fieldset>
                 <legend>Género:</legend>
                 <input type="radio" name="Genero" value="Feminino"> Feminino
                 <input type="radio" name="Genero" value="Masculino"> Masculino
             </fieldset><br>
-            <input type="button" value="Adicionar">
+            <input type="button" value="Adicionar" class="btnAdicionar">
         </div>
-        <div>
-           
+        <div class="DivSelect">
+           <select name="" id="" size="5"></select>
         </div>
     </section>
 
