Desafio18 - Idade, Genero, Totalizador

--- a/Desafios/Desafio18/desafio.html
+++ b/Desafios/Desafio18/desafio.html
@@ -22,7 +22,14 @@
             <input type="button" value="Adicionar" class="btnAdicionar">
         </div>
         <div class="DivSelect">
-           <select name="" id="" size="5"></select>
+             
+            <fieldset>
+                <legend>Detalhes</legend>
+                <select name="tSelGenero" id="cSelGenero" size="6">
+            </fieldset>
+
+            </select>
+            
         </div>
     </section>
 
