Desafio18 - Idade, Genero, Totalizador

--- a/Desafios/Desafio18/desafio.html
+++ b/Desafios/Desafio18/desafio.html
@@ -6,14 +6,14 @@
     <title>Desafio 18!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="inicar()">
     <header>
         <h1>Título</h1>
     </header>
     
     <section>
         <div class="RecebDados">
-            <p>Ano de Nascimento: <input type="number" class="inpAnoNasc"> </p>
+            <p>Ano de Nascimento: <input type="number" class="inpAnoNasc" id="CxAnoNasc" name="tAnoNasc"> </p>
             <fieldset>
                 <legend>Género:</legend>
                 <input type="radio" name="Genero" value="Feminino"> Feminino
