Desafio18 - Idade, Genero, Totalizador

--- a/Desafios/Desafio18/desafio.html
+++ b/Desafios/Desafio18/desafio.html
@@ -13,13 +13,13 @@
     
     <section>
         <div class="RecebDados">
-            <p>Ano de Nascimento: <input type="number" class="inpAnoNasc" id="CxAnoNasc" name="tAnoNasc"> </p>
+            <p>Ano de Nascimento: <input type="number" class="inpAnoNasc" id="CxAnoNasc" name="tAnoNasc" placeholder="AAAA"> </p>
             <fieldset>
                 <legend>Género:</legend>
                 <input type="radio" name="Genero" value="Feminino"> Feminino
                 <input type="radio" name="Genero" value="Masculino"> Masculino
             </fieldset><br>
-            <input type="button" value="Adicionar" class="btnAdicionar">
+            <input type="button" value="Adicionar" class="btnAdicionar" onclick="FcAdicionar()">
         </div>
         <div class="DivSelect">
              
