Desafio18 - Idade, Genero, Totalizador

--- a/Desafios/Desafio18/desafio.html
+++ b/Desafios/Desafio18/desafio.html
@@ -26,7 +26,8 @@
             <fieldset>
                 <legend>Detalhes</legend>
                 <select name="tSelGenero" id="cSelGenero" size="6">
-                </select>
+                </select><br>
+                <input type="button" value="Validar">
              </fieldset>
             
         </div>
