Desafio18 - Idade, Genero, Totalizador

--- a/Desafios/Desafio18/desafio.html
+++ b/Desafios/Desafio18/desafio.html
@@ -27,7 +27,7 @@
                 <legend>Detalhes</legend>
                 <select name="tSelGenero" id="cSelGenero" size="6">
                 </select><br>
-                <input type="button" value="Validar">
+                <input type="button" value="Verificar" onclick="FcVerificar()">
              </fieldset>
             
         </div>
