Desafio18 - Idade, Genero, Totalizador

--- a/Desafios/Desafio18/desafio.html
+++ b/Desafios/Desafio18/desafio.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="inicar()">
     <header>
-        <h1>Título</h1>
+        <h1>Desafio 18 - Totalisador!</h1>
     </header>
     
     <section>
@@ -30,6 +30,10 @@
                 <input type="button" value="Verificar" onclick="FcVerificar()">
              </fieldset>
             
+        </div>
+
+        <div id="resultado">
+
         </div>
     </section>
 
