Desafio18 - Idade, Genero, Peso e Totalizador

--- a/Desafios/Desafio18/desafio.html
+++ b/Desafios/Desafio18/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div class="RecebDados">
-            <p>Ano de Nascimento: <input type="number" class="inpAnoNasc" id="CxAnoNasc" name="tAnoNasc" placeholder="AAAA"> </p>
+            <p>Ano de Nascimento: <input type="number" class="inpAnoNasc" id="CxAnoNasc" name="tAnoNasc" placeholder="AAAA"><br>Peso:  </p>
             <fieldset>
                 <legend>Género:</legend>
                 <input type="radio" name="Genero" value="Feminino"> Feminino
