Desafio19 - Formula resolvente - equações quadráticas

--- a/Desafios/Desafio19/desafio.html
+++ b/Desafios/Desafio19/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            Desafio??????
+            <p>Equações do tipo: <strong>y = aX<sup>2</sup> + bX + c</strong> </p>
         </div>
         <div>
             Vamos tentar resolver!
