Desafio19 - Formula resolvente - equações quadráticas

--- a/Desafios/Desafio19/desafio.html
+++ b/Desafios/Desafio19/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            <p>Equações do tipo: <strong>y = aX<sup>2</sup> + bX + c</strong> </p>
+            <p>Equações do tipo: <strong>y = aX<sup>2</sup> + bX + c</strong> <br> <span><sub>exemplo: y= 3X<sup>2</sup>+ 2X + 2  </sub</span>></p>
         </div>
         <div>
             Vamos tentar resolver!
