Desafio19 - Formula resolvente - equações quadráticas

--- a/Desafios/Desafio19/desafio.html
+++ b/Desafios/Desafio19/desafio.html
@@ -14,6 +14,13 @@
     <section>
         <div>
             <p>Equações do tipo: <strong>y = aX<sup>2</sup> + bX + c</strong> <br> <span><sub>exemplo: y= 3X<sup>2</sup>+ 2X + 2  </sub</span>></p>
+            
+            <p>Y =
+                <span>A<input type="number" id="CxA" name="tCxA">X<sup>2</sup> </span>
+                <span>B <input type="number" id="CxB" name="tCxA">X </span> 
+                <span>C<input type="number" id="CxC" name="tCxC"></span><br>
+                <input type="Button" value="Resolver" class="btnResolver">
+            </p>    
         </div>
         <div>
             Vamos tentar resolver!
