--- a/Desafios/Desafio19/desafio.html
+++ b/Desafios/Desafio19/desafio.html
@@ -6,7 +6,7 @@
     <title>Desafio 19!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="iniciar()">
     <header>
         <h1>Formula resolvente!</h1>
     </header>
@@ -17,9 +17,9 @@
             
             <p>Y =
                 <span>A<input type="number" id="CxA" name="tCxA">X<sup>2</sup> </span>
-                <span>B <input type="number" id="CxB" name="tCxA">X </span> 
-                <span>C<input type="number" id="CxC" name="tCxC"></span><br>
-                <input type="Button" value="Resolver" class="btnResolver">
+                <span>B <input type="number" id="CxB" name="tCxA" readonly>X </span> 
+                <span>C<input type="number" id="CxC" name="tCxC" readonly></span><br>
+                <input type="Button" value="Resolver" class="btnResolver" onclick="reseolver()">
             </p>    
         </div>
         <div>
