Desafio19 - Formula resolvente - equações quadráticas

--- a/Desafios/Desafio19/desafio.html
+++ b/Desafios/Desafio19/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            <p>Equações do tipo: <strong>y = aX<sup>2</sup> + bX + c</strong> <br> <span><sub>exemplo: y= 3X<sup>2</sup>+ 2X + 2  </sub</span>></p>
+            <p>Equações do tipo: <strong>aX<sup>2</sup> + bX + c = 0</strong> <br> <span><sub>exemplo: 3X<sup>2</sup>+ 2X + 2 = 0  </sub</span></p>
             
             <p>Y =
                 <span>A<input type="number" id="CxA" name="tCxA" onchange="desblcCxB()">X<sup>2</sup> </span>
