--- a/Desafios/Desafio19/desafio.html
+++ b/Desafios/Desafio19/desafio.html
@@ -22,8 +22,8 @@
                 <input type="Button" value="Resolver" class="btnResolver" onclick="reseolver()">
             </p>    
         </div>
-        <div>
-            Vamos tentar resolver!
+        <div id="resultado">
+            
         </div>
     </section>
 
