Desafio19 - Formula resolvente - equações quadráticas

--- a/Desafios/Desafio19/desafio.html
+++ b/Desafios/Desafio19/desafio.html
@@ -19,7 +19,7 @@
                 <span>A<input type="number" id="CxA" name="tCxA" onchange="desblcCxB()">X<sup>2</sup> </span>
                 <span>B <input type="number" id="CxB" name="tCxA" readonly onchange="desblcCxC()">X </span> 
                 <span>C<input type="number" id="CxC" name="tCxC" readonly></span><br>
-                <input type="Button" value="Resolver" class="btnResolver" onclick="reseolver()">
+                <input type="Button" value="Resolver" class="btnResolver" onclick="Fcresolver()">
             </p>    
         </div>
         <div id="resultado">
