Desafio19 - Formula resolvente - equações quadráticas

--- a/Desafios/Desafio19/desafio.html
+++ b/Desafios/Desafio19/desafio.html
@@ -13,6 +13,7 @@
     
     <section>
         <div>
+            <p><sub>Efetua apenas 3 calculos de cada vez! </sub></p>
             <p>Equações do tipo: <strong>aX<sup>2</sup> + bX + c = 0</strong> <br> <span><sub>exemplo: 3X<sup>2</sup>+ 2X + 2 = 0  </sub</span></p>
             
             <p>Y =
