Desafio20 - Trabalhar com Datas.

--- a/Desafios/Desafio20/desafio.html
+++ b/Desafios/Desafio20/desafio.html
@@ -13,10 +13,11 @@
     
     <section>
         <div>
-            Desafio??????
+            Escolha uma data:<br>
+            <input type="date" id="CxData" name="tCxdata"> <input type="button" value="Selecionar" class="btnSelecionar">
         </div>
         <div>
-            Vamos tentar resolver!
+            
         </div>
     </section>
 
