Desafio20 - Trabalhar com Datas.

--- a/Desafios/Desafio20/desafio.html
+++ b/Desafios/Desafio20/desafio.html
@@ -6,7 +6,7 @@
     <title>Desafio 20!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="iniciar()">
     <header>
         <h1>Trabalhar com datas!</h1>
     </header>
