Desafio20 - Trabalhar com Datas.

--- a/Desafios/Desafio20/desafio.html
+++ b/Desafios/Desafio20/desafio.html
@@ -6,7 +6,7 @@
     <title>Desafio 20!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body onload="iniciar()">
+<body>
     <header>
         <h1>Trabalhar com datas!</h1>
     </header>
@@ -14,7 +14,7 @@
     <section>
         <div>
             Escolha uma data:<br>
-            <input type="date" id="CxData" name="tCxdata"> <input type="button" value="Selecionar" class="btnSelecionar">
+            <input type="date" id="CxData" name="tCxdata"> <input type="button" value="Selecionar" class="btnSelecionar" onclick="FcSelecionar()">
         </div>
         <div>
             
