Desafio20 - Trabalhar com Datas.

--- a/Desafios/Desafio20/desafio.html
+++ b/Desafios/Desafio20/desafio.html
@@ -16,7 +16,7 @@
             Escolha uma data:<br>
             <input type="date" id="CxData" name="tCxdata"> <input type="button" value="Selecionar" class="btnSelecionar" onclick="FcSelecionar()">
         </div>
-        <div>
+        <div id="resultado">
             
         </div>
     </section>
