Desafio21 - Ordenando Vetores (array)

--- a/Desafios/Desafio21/desafio.html
+++ b/Desafios/Desafio21/desafio.html
@@ -13,7 +13,11 @@
     
     <section>
         <div>
-            Valor: <input type="number">
+            Valor: <input type="number"> <input type="button" value="Adicionar"><br>
+            <br>Adicionou:<br>
+            <select name="" id="" size="6">
+
+            </select>
         </div>
         <div>
             Vamos tentar resolver!
