Desafio21 - Ordenando Vetores (array)

--- a/Desafios/Desafio21/desafio.html
+++ b/Desafios/Desafio21/desafio.html
@@ -13,9 +13,9 @@
     
     <section>
         <div>
-            Valor: <input type="number"> <input type="button" value="Adicionar"><br>
+            Valor: <input type="number" id="CxValor" name="tCxValor"> <input type="button" value="Adicionar"><br>
             <br>Adicionou:<br>
-            <select name="" id="" size="6">
+            <select name="selValAdd" id="CselValAdd" size="6">
 
             </select>
         </div>
