Desafio21 - Ordenando Vetores (array)

--- a/Desafios/Desafio21/desafio.html
+++ b/Desafios/Desafio21/desafio.html
@@ -17,10 +17,10 @@
             <br>Adicionou:<br>
             <select name="selValAdd" id="CselValAdd" size="6">
 
-            </select>
+            </select> <input type="button" value="Ordenar" class="btnOrdenar">
         </div>
         <div>
-            Vamos tentar resolver!
+           
         </div>
     </section>
 
