Desafio21 - Ordenando Vetores (array)

--- a/Desafios/Desafio21/desafio.html
+++ b/Desafios/Desafio21/desafio.html
@@ -6,14 +6,14 @@
     <title>Desafio 21!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="iniciar()">
     <header>
         <h1>Ordeneando Vetores!</h1>
     </header>
     
     <section>
         <div>
-            Valor: <input type="number" id="CxValor" name="tCxValor"> <input type="button" value="Adicionar"><br>
+            Valor: <input type="number" id="CxValor" name="tCxValor"> <input type="button" value="Adicionar" onclick="adicionar()"><br>
             <br>Adicionou:<br>
             <select name="selValAdd" id="CselValAdd" size="6">
 
