Desafio21 - Ordenando Vetores (array)

--- a/Desafios/Desafio21/desafio.html
+++ b/Desafios/Desafio21/desafio.html
@@ -17,7 +17,7 @@
             <br>Adicionou:<br>
             <select name="selValAdd" id="CselValAdd" size="6">
 
-            </select> <input type="button" value="Ordenar" class="btnOrdenar">
+            </select> <input type="button" value="Ordenar" class="btnOrdenar" onclick="ondenaCresEdecres()">
         </div>
         <div>
            
