Desafio21 - Ordenando Vetores (array)

--- a/Desafios/Desafio21/desafio.html
+++ b/Desafios/Desafio21/desafio.html
@@ -19,7 +19,7 @@
 
             </select> <input type="button" value="Ordenar" class="btnOrdenar" onclick="ondenaCresEdecres()">
         </div>
-        <div>
+        <div id="resultado">
            
         </div>
     </section>
