Desafio21 - Ordenando Vetores (array) - Crecente e decrescente

--- a/Desafios/Desafio21/desafio.html
+++ b/Desafios/Desafio21/desafio.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="iniciar()">
     <header>
-        <h1>Ordeneando Vetores!</h1>
+        <h1>Ordenação de Vetores!</h1>
     </header>
     
     <section>
