Desafio22- Inverter sequencia de caracteres

--- a/Desafios/Desafio22/desafio.html
+++ b/Desafios/Desafio22/desafio.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Inverter Palavras!</h1>
     </header>
     
     <section>
         <div>
-            Desafio??????
+           
         </div>
         <div>
             Vamos tentar resolver!
