Desafio22- Inverter sequencia de caracteres

--- a/Desafios/Desafio22/desafio.html
+++ b/Desafios/Desafio22/desafio.html
@@ -12,8 +12,12 @@
     </header>
     
     <section>
-        <div>
+        <div class="dados">
            
+        </div>
+
+        <div class="recebidos">
+
         </div>
         <div>
             Vamos tentar resolver!
