Desafio22- Inverter sequencia de caracteres

--- a/Desafios/Desafio22/desafio.html
+++ b/Desafios/Desafio22/desafio.html
@@ -13,11 +13,14 @@
     
     <section>
         <div class="dados">
-           
+           Palavra: <input type="text" id="Cxpalavra" name="tCxpalavra"><br>
+           <input type="button" value="Inverter">
         </div>
 
         <div class="recebidos">
+            <select name="tSelPalavraInv" id="cSelPalavraInv" size="6">
 
+            </select>
         </div>
         <div>
             Vamos tentar resolver!
