Desafio22- Inverter sequencia de caracteres

--- a/Desafios/Desafio22/desafio.html
+++ b/Desafios/Desafio22/desafio.html
@@ -18,6 +18,7 @@
         </div>
 
         <div class="recebidos">
+            Palavra invertidas<br>
             <select name="tSelPalavraInv" id="cSelPalavraInv" size="6">
 
             </select>
