Desafio22- Inverter sequencia de caracteres

--- a/Desafios/Desafio22/desafio.html
+++ b/Desafios/Desafio22/desafio.html
@@ -12,9 +12,9 @@
     </header>
     
     <section>
-        <div class="dados">
-           Palavra: <input type="text" id="Cxpalavra" name="tCxpalavra"><br>
-           <input type="button" value="Inverter">
+        <div class="dados">  
+               Palavra: <input type="text" id="Cxpalavra" name="tCxpalavra"><br>
+               <input type="button" value="Inverter" class="btnInverter">       
         </div>
 
         <div class="recebidos">
