Desafio23 - Armazem de Fruta - Preços, descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Armazem da Fruta!</h1>
     </header>
     
     <section>
-        <div>
-            Desafio??????
+        <div class="fruta">
+            <img src="imagens/morangos.jpg" alt="">
+            <img src="imagens/maca.jpg" alt="">
         </div>
-        <div>
-            Vamos tentar resolver!
+        <div class="detalhes">
+            <select name="" id="" size="6">
+
+            </select>
         </div>
     </section>
 
