Desafio23 - Armazem de Fruta - Preços, descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -13,8 +13,14 @@
     
     <section>
         <div class="fruta">
-            <img src="imagens/morangos.jpg" alt="">
-            <img src="imagens/maca.jpg" alt="">
+            <div class="img">
+                <img src="imagens/morangos.jpg" alt="">
+                <h1>Morangos</h1>
+            </div>
+            <div class="img">
+                <img src="imagens/maca.jpg" alt="">
+                <h1>Maçãs</h1>
+            </div>
         </div>
         <div class="detalhes">
             <select name="" id="" size="6">
