--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -12,14 +12,13 @@
     </header>
     
     <section>
-        <div class="fruta">
+        <div class="fruta morango">
             <div class="img">
                 <img src="imagens/morangos.jpg" alt="">
                 <h1>Morangos</h1>
             </div>
-            <div class="img">
+            <div class="img maca">
                 <img src="imagens/maca.jpg" alt="">
-                <h1>Maçãs</h1>
             </div>
         </div>
         <div class="detalhes">
