Desafio23 - Armazem de Fruta - Preços, descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -12,13 +12,11 @@
     </header>
     
     <section>
-        <div class="fruta morango">
-            <div class="img">
-                <img src="imagens/morangos.jpg" alt="">
+        <div class="fruta">
+            <div class="morango">
                 <h1>Morangos</h1>
             </div>
-            <div class="img maca">
-                <img src="imagens/maca.jpg" alt="">
+            <div class="maca">
             </div>
         </div>
         <div class="detalhes">
