Desafio23 - Armazem de Fruta - Preços, descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -17,6 +17,7 @@
                 <h1>Morangos</h1>
             </div>
             <div class="maca">
+                <h1>Maçã</h1>
             </div>
         </div>
         <div class="detalhes">
