Desafio23 - Armazem de Fruta - Preços, descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -21,6 +21,7 @@
             </div>
         </div>
         <div class="detalhes">
+            Detalhes:<br>
             <select name="" id="" size="6">
 
             </select>
