Desafio23 - Armazem de Fruta - Preços, descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -14,7 +14,7 @@
     <section>
         <div class="fruta">
             <div class="morango">
-                <h1>Morangos</h1>
+                <h1 onclick="addfruta('morango')">Morangos</h1>
             </div>
             <div class="maca">
                 <h1>Maçã</h1>
@@ -22,7 +22,7 @@
         </div>
         <div class="detalhes">
             Detalhes:<br>
-            <select name="" id="" size="6">
+            <select name="" id="cSelDetalhes" size="6">
 
             </select>
         </div>
