Desafio23 - Armazem de Fruta - Preços, descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -14,7 +14,7 @@
     <section>
         <div class="fruta">
             <div class="morango">
-                <h1 onclick="addfruta('morango')">Morangos</h1>
+                <h1 onclick="addfruta('Morango')">Morangos</h1>
             </div>
             <div class="maca">
                 <h1>Maçã</h1>
