--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -22,7 +22,7 @@
         </div>
         <div class="detalhes">
             Detalhes:<br>
-            <select name="" id="cSelDetalhes" size="6">
+            <select name="tSelDetalhes" id="cSelDetalhes" size="6">
 
             </select>
         </div>
