--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -17,7 +17,7 @@
                 <h1 onclick="addfruta('Morango')">Morangos</h1>
             </div>
             <div class="maca">
-                <h1>Maçã</h1>
+                <h1 onclick="addfruta('Maçã')">Maçã</h1>
             </div>
         </div>
         <div class="detalhes">
@@ -25,6 +25,7 @@
             <select name="tSelDetalhes" id="cSelDetalhes" size="6">
 
             </select>
+            <input type="number" placeholder="Sub-Total" id="cxSubTot" readonly>
         </div>
     </section>
 
