Desafio23 - Armazem de Fruta - Preços, descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -25,7 +25,7 @@
             <select name="tSelDetalhes" id="cSelDetalhes" size="6">
 
             </select>
-            <input type="number" placeholder="Sub-Total" id="cxSubTot" readonly>
+            <input type="number" placeholder="Sub-Total" id="cxSubTot" disabled>
         </div>
     </section>
 
