--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -25,7 +25,7 @@
             <select name="tSelDetalhes" id="cSelDetalhes" size="6">
 
             </select>
-            <input type="number" placeholder="Sub-Total" id="cxSubTot" disabled>
+            <input type="text" placeholder="Sub-Total" id="cxSubTot" name="tcxSubTot" disabled>
         </div>
     </section>
 
