Desafio23 - Armazem de Fruta - Preços, descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -27,6 +27,10 @@
             </select>
             <input type="text" placeholder="Sub-Total" id="cxSubTot" name="tcxSubTot" disabled>
         </div>
+       
+        <div id="resultado">
+
+        </div>
     </section>
 
     <footer>
