Desafio23 - Armazem de Fruta - Preços e descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -22,7 +22,7 @@
         </div>
         <div class="detalhes">
             Detalhes:<br>
-            <select name="tSelDetalhes" id="cSelDetalhes" size="6">
+            <select name="tSelDetalhes" id="cSelDetalhes" size="6" disabled>
 
             </select>
             <input type="text" placeholder="Sub-Total" id="cxSubTot" name="tcxSubTot" disabled>
