Desafio23 - Armazem de Fruta - Preços e descontos

--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -25,6 +25,7 @@
             <select name="tSelDetalhes" id="cSelDetalhes" size="6" disabled>
 
             </select>
+            <sub>Sub-total:</sub>
             <input type="text" placeholder="Sub-Total" id="cxSubTot" name="tcxSubTot" disabled>
         </div>
        
