--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -25,8 +25,10 @@
             <select name="tSelDetalhes" id="cSelDetalhes" size="6" disabled>
 
             </select>
-            <sub>Sub-total:</sub>
+            <span>Sub-total:</span>
             <input type="text" placeholder="Sub-Total" id="cxSubTot" name="tcxSubTot" disabled>
+            <span id="lblDesconto">Deconto:</span>
+            <input type="text" id="cxDesconto" name="tcxDesconto" disabled>
         </div>
        
         <div id="resultado">
