--- a/Desafios/Desafio23/desafio.html
+++ b/Desafios/Desafio23/desafio.html
@@ -29,6 +29,8 @@
             <input type="text" placeholder="Sub-Total" id="cxSubTot" name="tcxSubTot" disabled>
             <span id="lblDesconto">Deconto:</span>
             <input type="text" id="cxDesconto" name="tcxDesconto" disabled>
+            <span>Total:</span>
+            <input type="text" id="cxTotal" name="tcxTotal" placeholder="Total" disabled>
         </div>
        
         <div id="resultado">
