Desafio24 - MMC e MDC

--- a/Desafios/Desafio24/desafio.html
+++ b/Desafios/Desafio24/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            Desafio??????
+            <p class="desafio24">MMC (mínimo múltiplo comum) e o MDC (máximo divisor comum)</p>
         </div>
         <div>
             Vamos tentar resolver!
