Desafio24 - MMC e MDC

--- a/Desafios/Desafio24/desafio.html
+++ b/Desafios/Desafio24/desafio.html
@@ -14,9 +14,10 @@
     <section>
         <div>
             <p class="desafio24"><strong>MMC</strong> (mínimo múltiplo comum) e <strong>MDC</strong> (máximo divisor comum)</p>
+            <p></p>
         </div>
         <div>
-            Vamos tentar resolver!
+           <p>Valor: <input type="number"></p>
         </div>
     </section>
 
