Desafio24 - MMC e MDC

--- a/Desafios/Desafio24/desafio.html
+++ b/Desafios/Desafio24/desafio.html
@@ -17,7 +17,9 @@
             <p></p>
         </div>
         <div>
-           <p>Valor: <input type="number"></p>
+           <fieldset>
+               <legend>Valores para o calculo:</legend>
+           </fieldset>
         </div>
     </section>
 
