Desafio24 - MMC e MDC

--- a/Desafios/Desafio24/desafio.html
+++ b/Desafios/Desafio24/desafio.html
@@ -18,7 +18,7 @@
         </div>
         <div>
            <fieldset>
-               <legend>Valores para o calculo:</legend>
+               <legend>Valores para calculo:</legend>
            </fieldset>
         </div>
     </section>
