Desafio24 - MMC e MDC

--- a/Desafios/Desafio24/desafio.html
+++ b/Desafios/Desafio24/desafio.html
@@ -19,6 +19,9 @@
         <div>
            <fieldset>
                <legend>Valores para calculo:</legend>
+               <p></p>
+               <p>Valor 1: <input type="number"> </p>
+               <p>Valor 2: <input type="number"> </p>
            </fieldset>
         </div>
     </section>
