--- a/Desafios/Desafio24/desafio.html
+++ b/Desafios/Desafio24/desafio.html
@@ -20,7 +20,7 @@
            <fieldset>
                <legend>Valores para calculo:</legend>
                <p></p>
-               <p>Valor 1: <input type="number" class="valor"> </p>
+               <p>Valor 1: <input type="number" class="valor" id="cxVal1" name="tCxVal1"> </p>
                <p>Valor 2: <input type="number" class="valor"> </p>
                <p><input type="button" value="Calcular"></p>
            </fieldset>
